Use serverless compute

--- a/cli/jobs/pipelines-with-components/nyc_taxi_data_regression/single-job-pipeline.yml
+++ b/cli/jobs/pipelines-with-components/nyc_taxi_data_regression/single-job-pipeline.yml
@@ -7,7 +7,7 @@ jobs:
   train_job:
     type: command
     component: ./train.yml
-    compute: azureml:test-compute-instance
+    compute: azureml:serverless
     inputs:
       training_data: 
         type: uri_folder
